--- a/src/styles.css
+++ b/src/styles.css
@@ -1,2 +1,34 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700');
+.mat-row, .mat-footer-row {
+    min-height: 32px;
+}
+
+.mat-row:hover {
+    background: #1e88e540;
+}
+
+.mat-header-cell, .mat-footer-cell {
+    font-weight: 500;
+    color: black !important;
+    text-align: center;
+    justify-content: center;
+}
+
+.mat-header-cell:first-child, .mat-cell:first-child, .mat-footer-cell:first-child {
+    padding-left: 10px;
+}
+
+.mat-header-cell:last-child, .mat-cell:last-child, .mat-footer-cell:last-child {
+    padding-right: 10px;
+}
+
+.mat-cell {
+    text-align: center;
+    justify-content: center;
+}
+
+input:read-only {
+    color: darkgrey;
+}
