--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,1 +1,13 @@
-<p>about works!</p>
+<p style="text-align: center;">"A dose of my contribution to the scientific community, scientists, researchers and health professionals.
+    <br> Developed during my quarantine and free time from work at home."
+    <br><br>
+    The database was acquired on the website of the World Health Organization.
+</p>
+
+<p style="text-align: center;"><b>Developer:</b> Luiz Bezerra</p>
+<p style="text-align: center;">Computer Engineer</p>
+
+
+<p><b>LinkedIn:</b> <a [href]="linkedin" target="_blank"> {{linkedin}} </a> </p>
+<p><b>Git Repostory:</b> <a [href]="git_front" target="_blank"> {{git_front}} </a> </p>
+<p><b>Git Repostory:</b> <a [href]="git_api" target="_blank"> {{git_api}} </a></p>
