--- a/src/app/search-articles/articles-table/articles-table.component.html
+++ b/src/app/search-articles/articles-table/articles-table.component.html
@@ -1,5 +1,5 @@
 <div class="mat-elevation-z4" style="padding: 0; margin: 0 15px;">
-    <app-filters (response)="getArticles($event)"></app-filters>
+    <app-filters (response)="getArticles($event)" [tags]="tags" [journals]="journals" [authors]="authors"></app-filters>
 </div>
 
 <mat-card>
