--- a/src/app/search-articles/articles-table/modal-abstract/modal-abstract.component.html
+++ b/src/app/search-articles/articles-table/modal-abstract/modal-abstract.component.html
@@ -8,6 +8,7 @@
 <mat-card-content>
     <div fxLayout="row wrap">
         {{article?.abstract}}
+        <span *ngIf="!article?.abstract">There is not abstract.</span>
     </div>
 </mat-card-content>
 
